# Ros2-Kurwa

./: README.md
joint_simulator/: package.xml  setup.py
joint_simulator/joint_simulator/: joint_simulator_node.py
pid_controller/: package.xml  setup.py
pid_controller/config/: parameters.yaml
pid_controller/launch/: launch.py
pid_controller/pid_controller/: pid_controller_node.py  reference_input_node.py
pid_controller/pid_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pid_controller/prefix_override/: sitecustomize.py
pid_controller_msgs/: CMakeLists.txt  package.xml
qube_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
qube_ws/install/qube_description/share/qube_description/: package.sh
qube_ws/src/qube_bringup/launch/: bringup.launch.py
qube_ws/src/qube_bringup/urdf/: controlled_qube.urdf.xacro
qube_ws/src/qube_description/: setup.py
qube_ws/src/qube_description/launch/: view_qube.launch.py
qube_ws/src/qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
src/qube_bringup/: package.xml  setup.py
src/qube_bringup/launch/: bringup.launch.py
src/qube_bringup/urdf/: controlled_qube.urdf.xacro
src/qube_controller/: package.xml  setup.py
src/qube_controller/qube_controller/: pid_node.py
src/qube_description/: package.xml  setup.cfg
src/qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
